--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.0",
+    "@angular/animations": "^19.1.5",
     "@angular/cdk": "^19.0.5",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
@@ -22,6 +22,8 @@
     "@angular/router": "^19.1.0",
     "cloudinary-core": "^2.13.1",
     "json-server": "^1.0.0-beta.3",
+    "ng-zorro-antd": "^19.0.2",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
